[package]
name = "client_util"
version = "0.1.0"
authors = ["Raphael Taylor-Davies <r.taylordavies@googlemail.com>"]
description = "Shared code for IOx clients"
edition = "2018"

[features]
default = []

socks5 = [ "hyper-socks2" , "hyper" ]

[dependencies]
http = "0.2.3"
prost = "0.8"
thiserror = "1.0.28"
tonic = { version = "0.5.0" }
tower = "0.4"
hyper-socks2 = { version = "0.6", optional = true, default-features = false }
hyper = {version = "0.14", optional = true }

[dev-dependencies]
tokio = { version = "1.11", features = ["macros"] }

