[package]
name = "mutable_batch"
version = "0.1.0"
edition = "2018"
description = "A mutable arrow RecordBatch"

[dependencies]
arrow = { version = "5.5", features = ["prettyprint"] }
arrow_util = { path = "../arrow_util" }
data_types = { path = "../data_types" }
entry = { path = "../entry" }
schema = { path = "../schema" }
snafu = "0.6"
hashbrown = "0.11"
influxdb_line_protocol = { path = "../influxdb_line_protocol" }
generated_types = { path = "../generated_types" }

[dev-dependencies]
arrow_util = { path = "../arrow_util" }
bytes = "1.0"
criterion = "0.3"
flate2 = "1.0"
prost = "0.8"

[[bench]]
name = "write_entry"
harness = false

[[bench]]
name = "write_lp"
harness = false

[[bench]]
name = "write_pb"
harness = false
