[package]
name = "stream"
version = "0.1.0"
authors = ["Raphael Taylor-Davies <r.taylordavies@googlemail.com>"]
description = "Support for data streaming systems such as Kinesis and Kafka"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu = "0.6"
influxdb_line_protocol = { path = "../influxdb_line_protocol" }
