[package]
name = "stream"
version = "0.1.0"
authors = ["Raphael Taylor-Davies <r.taylordavies@googlemail.com>"]
description = "Support for data streaming systems such as Kinesis and Kafka"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0"
chrono = "0.4"
data_types = { path = "../data_types" }
entry = { path = "../entry" }
futures = "0.3"
hashbrown = "0.11"
influxdb_line_protocol = { path = "../influxdb_line_protocol" }
observability_deps = { path = "../observability_deps" }
parking_lot = "0.11"
pin-project = "1.0"
prost = "0.7"
rusoto_core = "0.46"
rusoto_kinesis = "0.46"
snafu = "0.6"
tokio = { version = "1.0", features = ["macros", "time"] }
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.6.3", features = ["time"] }

[build-dependencies]
prost-build = "0.7"
