[package]
name = "token_challenge"
version = "0.1.0"
authors = ["Marco Neumann <mneumann@influxdata.com>"]
edition = "2018"
description = "Simple token-challenges for fat-finger protection."

[dependencies]
base64 = "0.13"
chrono = "0.4"
hmac = "0.11"
observability_deps = { path = "../observability_deps" }
rand = "0.8"
sha2 = "0.9"
snafu = "0.6"

[dev-dependencies]
test_helpers = { path = "../test_helpers" }
